# JustIRLoader

./: Cargo.toml  README.md
src/: editor.rs  lib.rs
src/ir_loader/: error.rs  ir.rs  mod.rs
xtask/src/: main.rs
